--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "ImageHost Uploader",
-  "version": "1.0.0",
+  "version": "0.9.0",
   "description": "Upload images to various image hosting services",
   "permissions": [
     "storage",
@@ -11,10 +11,8 @@
     "activeTab"
   ],
   "host_permissions": [
-    "*://*.qiniudn.com/*",
-    "*://*.qbox.me/*",
-    "*://*.aliyuncs.com/*",
-    "https://api.github.com/*"
+    "https://api.imgur.com/*",
+    "http://home.xs25.cn/*"
   ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
@@ -24,11 +22,11 @@
       "16": "images/icon16.png",
       "48": "images/icon48.png",
       "128": "images/icon128.png"
-    }
+    },
+    "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "icons": {
     "16": "images/icon16.png",
